--- a/src/pages/home/ingredients.module.css
+++ b/src/pages/home/ingredients.module.css
@@ -71,7 +71,7 @@
     }
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 1000px) {
     .fitScreen {
         height: 100vh;
     }
@@ -92,7 +92,7 @@
         width: 50%;
         float: left;
         padding-right: 12em;
-        padding-top: 10em;
+        padding-top: 16vh;
     }
 
     .seen-h1 {
