--- a/src/pages/home/testimonials.module.css
+++ b/src/pages/home/testimonials.module.css
@@ -51,7 +51,7 @@
     }
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 1000px) {
     .fitScreen {
         height: 100vh;
     }
